legacy/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speech-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
  - host: dev-asr.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: speech-api-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speech-ui-service
            port:
              number: 8501
